// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions createNotice() should use default options when none provided 1`] = `
Object {
  "noticeId": "1",
  "showDismiss": true,
  "status": "is-info",
  "text": "Notice text",
}
`;

exports[`actions status helpers bound createNotice dispatches expected action 1`] = `
Object {
  "notice": Object {
    "noticeId": "3",
    "showDismiss": true,
    "status": "is-success",
    "text": "text",
  },
  "type": "NOTICE_CREATE",
}
`;

exports[`actions status helpers bound createNotice dispatches expected action 2`] = `
Object {
  "notice": Object {
    "noticeId": "4",
    "showDismiss": true,
    "status": "is-error",
    "text": "text",
  },
  "type": "NOTICE_CREATE",
}
`;

exports[`actions status helpers bound createNotice dispatches expected action 3`] = `
Object {
  "notice": Object {
    "noticeId": "5",
    "showDismiss": true,
    "status": "is-info",
    "text": "text",
  },
  "type": "NOTICE_CREATE",
}
`;

exports[`actions status helpers bound createNotice dispatches expected action 4`] = `
Object {
  "notice": Object {
    "noticeId": "6",
    "showDismiss": true,
    "status": "is-warning",
    "text": "text",
  },
  "type": "NOTICE_CREATE",
}
`;

exports[`actions status helpers bound createNotice dispatches expected action 5`] = `
Object {
  "notice": Object {
    "noticeId": "7",
    "showDismiss": true,
    "status": "is-plain",
    "text": "text",
  },
  "type": "NOTICE_CREATE",
}
`;
